Kubernetes Setup/production.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: production
    labels: 
      name: production
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todoapp
  name: todoapp-controller
  namespace: production
spec:
  selector:
    matchLabels:
      app: todoapp
  replicas: 2
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
      - name: todoapp
        namespace: todoapp
        image: registry.gitlab.com/devops-exercise/lecture-devops-app:prod
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: todoapp
  name: todoapp
  namespace: production
spec:
  type: NodePort
  ports:
    - nodeport: 31131
      port: 3000
      targetPort: 3000
  selector:
    app: todoapp
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo
  name: mongo
  namespace: production
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo
