Kubernetes Setup/test.yaml

apiVersion: v1
kind: Namespace
metadata:
    name: test
    labels: 
      name: test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-controller
  labels:
    app: todoapp
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
      - name: todoapp
        namespace: test
        image: registry.gitlab.com/devops-exercise/lecture-devops-app:test
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: todoapp
  name: todoapp
  namespace: test
spec:
  type: NodePort
  ports:
    - nodeport: 31132
      port: 3000
      targetPort: 3000
  selector:
    name: todoapp
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo
  namespace: test
  name: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo
